# lp1

./: README  README.md  expo.cpp  raise.cpp
X's/: howmany  howmany.cpp  teste  teste.cpp
battleship/: battleship  battleship.cpp  databattleship.txt  test.txt
circle/: circle.cpp  circle.h  main.cpp
classTemplate/: driver_stack.cpp  exec  stack.h
expo/: expo.cpp  raise.cpp
fibonacci/: fibonacci  fibonacci.cpp
filter/: data.txt  filter  filter.cpp
fraction/: fraction.cpp  fraction.h  main.cpp
intervalos/: intervalos.cpp
linkedList/: stack.h
matrix3x3/: matrix.cpp
menor elemento/: menor_elemento  menor_elemento.cpp
min_comp/: min_comp  min_comp.cpp
negativo5/: negativo5.cpp
pontGen/: main.cpp  pontgen.cpp  pontgen.h
ranges/IntRanges/: CMakeLists.txt  README.md
ranges/IntRanges/include/: int_ranges.h
ranges/IntRanges/src/: driver.cpp  int_ranges.cpp
ranges/IntRanges/test/: main.cpp
ranges/rangestemp/: driver  driver.cpp  int_ranges.cpp  int_ranges.h
soma_pares/: soma_pares.cpp
swap/: swap.cpp  window  window.cpp
template/: main.cpp
